Added req validation, added global error handler, created migration for refresh tokens
